--- a/Assignment6/code/Makefile
+++ b/Assignment6/code/Makefile
@@ -7,7 +7,7 @@ all:
 	$(MAKE) -C $(KERNEL_DIR) M=$(shell pwd) modules
 	
 app: 
-	gcc -o userapp userapp.c
+	gcc -o testapp testapp.c -pthread
 
 clean:
 	rm -rf *.o *.ko *.mod.* *.symvers *.order *~ *.mod
